--- a/APDEV Phase 1/main.css
+++ b/APDEV Phase 1/main.css
@@ -1,3 +1,10 @@
+.center {
+  text-align: center;
+   display: block;
+  margin: 1rem auto;
+}
+
+
 body {
   margin: 0;
   font-family: Arial, sans-serif;
@@ -11,3 +18,33 @@ header {
   display: flex;
   justify-content: space-between;
 }
+
+#labContainer{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 1.5rem;
+  margin-top: 1rem;
+}
+
+
+.lab {
+  border: 1px solid #ccc;
+  padding: 1rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  border-radius: 8px;
+  background-color: #f9f9f9;
+  box-shadow: 0 1px 2px black;
+  text-align: center;
+}
+
+.reservation {
+  border: 1px solid #ccc;
+  text-align: center;
+}
+
+button {
+  margin: 0.3rem;
+  padding: 0.4rem 0.6rem;
+}
+
